--- a/svs/api/package.json
+++ b/svs/api/package.json
@@ -2,6 +2,8 @@
   "type": "module",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.3"
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "mongodb": "^4.4.1"
   }
 }
