--- a/svs/api/package.json
+++ b/svs/api/package.json
@@ -1,5 +1,8 @@
 {
   "type": "module",
+  "scripts": {
+    "start": "nodemon index.js"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
