🐛 Fix missing dependency

--- a/svs/api/package.json
+++ b/svs/api/package.json
@@ -1,7 +1,8 @@
 {
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "build": "node index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
