--- a/froooty/api/package.json
+++ b/froooty/api/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
     "@types/node": "^17.0.27",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
