--- a/froooty/api/tsconfig.json
+++ b/froooty/api/tsconfig.json
@@ -8,7 +8,5 @@
         "experimentalDecorators": true,
         "sourceMap": true
     },
-    "exclude": [
-        "node_modules"
-    ]
+    "exclude": ["node_modules"]
 }
