--- a/froooty/api/package.json
+++ b/froooty/api/package.json
@@ -4,14 +4,16 @@
     "main": "index.js",
     "license": "MIT",
     "dependencies": {
-        "@types/cors": "^2.8.12",
-        "@types/express": "^4.17.13",
-        "@types/node": "^17.0.27",
+        "bcrypt": "^5.0.1",
         "body-parser": "^1.20.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.0",
         "express": "^4.18.0",
         "helmet": "^5.0.2",
+        "jsonwebtoken": "^8.5.1",
+        "passport": "^0.5.2",
+        "passport-jwt": "^4.0.0",
+        "passport-local": "^1.0.0",
         "pg": "^8.7.3",
         "prettier": "^2.6.2",
         "reflect-metadata": "^0.1.13",
@@ -21,5 +23,11 @@
     },
     "scripts": {
         "start": "nodemon index.ts"
+    },
+    "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
+        "@types/cors": "^2.8.12",
+        "@types/express": "^4.17.13",
+        "@types/node": "^17.0.31"
     }
 }
