--- a/froooty/app/package.json
+++ b/froooty/app/package.json
@@ -7,13 +7,18 @@
         "@testing-library/react": "^13.0.0",
         "@testing-library/user-event": "^13.2.1",
         "bootstrap": "^5.1.3",
+        "i18next": "^21.8.2",
+        "i18next-browser-languagedetector": "^6.1.4",
+        "i18next-http-backend": "^1.4.0",
         "prop-types": "^15.8.1",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
+        "react-i18next": "^11.16.9",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
         "sass": "^1.51.0",
-        "web-vitals": "^2.1.0"
+        "web-vitals": "^2.1.0",
+        "yup": "^0.32.11"
     },
     "scripts": {
         "start": "react-scripts start",
