--- a/froooty/app/package.json
+++ b/froooty/app/package.json
@@ -6,7 +6,8 @@
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^13.0.0",
         "@testing-library/user-event": "^13.2.1",
-        "bootstrap": "^5.1.3",
+        "bootstrap": "5.2.0-beta1",
+        "date-fns": "^2.28.0",
         "i18next": "^21.8.2",
         "i18next-browser-languagedetector": "^6.1.4",
         "i18next-http-backend": "^1.4.0",
@@ -14,6 +15,7 @@
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
         "react-i18next": "^11.16.9",
+        "react-icons": "^4.3.1",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
         "sass": "^1.51.0",
