--- a/froooty/api/package.json
+++ b/froooty/api/package.json
@@ -25,7 +25,8 @@
         "typescript": "^4.6.3"
     },
     "scripts": {
-        "start": "nodemon index.ts"
+        "start": "nodemon index.ts",
+        "prod": "tsc && cp -i -v -r public build && node build/index.js"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
