--- a/froooty/api/tsconfig.json
+++ b/froooty/api/tsconfig.json
@@ -6,7 +6,8 @@
         "moduleResolution": "node",
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
-        "sourceMap": true
+        "sourceMap": true,
+        "outDir": "build"
     },
     "exclude": ["node_modules"]
 }
